fix spacing in modules pages

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -467,7 +467,7 @@ ul {
     color: #80961d;
     font-size: 2rem;
     font-weight: 600;
-    line-height: 0rem;
+    line-height: 4rem;
     @media only screen and (max-width : 480px) {
       font-size: 1.5rem;
     }
